--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.1.5",
     "react-scripts": "5.0.1",
     "react-select-async-paginate": "^0.6.1",
     "web-vitals": "^2.1.4"
